ingress/productapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productapi-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: productapi
      port:
        number: 4999
