ingress/salesorder-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: salesorder-ingress
spec:
  rules:
  - host: salesorder.com
    http:
      paths:
      - path: /tst
        pathType: Prefix
        backend:
          service:
            name: apigetway
            port:
              number: 5000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: apigetway
            port:
              number: 5000
      - path: /teste/?(.*)
        pathType: Prefix
        backend:
          service:
            name: apigetway
            port:
              number: 5000
      - path: /GetUserById/?(.*)
        pathType: Prefix
        backend:
          service:
            name: apigetway
            port:
              number: 5000
      - path: /CreateUser
        pathType: Prefix
        backend:
          service:
            name: apigetway
            port:
              number: 5000                            
      # - path: /users
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: apiuserhttp
      #       port:
      #         number: 8088
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: apiuserhttp
            port:
              number: 8088              
      # - path: /create
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: apiuserhttp
      #       port:
      #         number: 8088                            
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orderapi
            port:
              number: 8080                                          
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: orderapi
            port:
              number: 8080
