ingress/userapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapi-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: apiuserhttp
      port:
        number: 8088
